--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "remake",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "main.js",
 	"scripts": {
 		"start": "node index.js",
 		"test": "node node_modules/istanbul/lib/cli.js cover -x 'spec/**' node_modules/jasmine/bin/jasmine.js"
