--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"asar": "^3.0.2",
 		"async": "^2.6.3",
 		"body-parser": "^1.19.0",
-		"browserify": "^16.5.0",
+		"browserify": "^16.5.1",
 		"busboy": "^0.2.14",
 		"case": "^1.6.2",
 		"compression": "^1.7.4",
@@ -27,6 +27,7 @@
 		"ncp": "^2.0.0",
 		"node-sass": "^4.13.1",
 		"striptags": "^3.1.1",
+		"tenkai": "file:../tenkai",
 		"tmp": "0.0.33",
 		"uglify-es": "^3.3.9",
 		"underscore": "^1.9.2",
